--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Classroom Tracker",
-  "name": "Classroom Tracker",
+  "short_name": "nie class track",
+  "name": "nie class track",
   "icons": [
     {
       "src": "favicon.ico",
